apps/mealie/resources/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mealie
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 9000
      targetPort: 9000
  selector:
    app.kubernetes.io/name: mealie
